--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^9.4.6",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
+    "pug": "^2.0.0-rc.4",
     "typescript": "^2.7.2"
   },
   "devDependencies": {
