--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.4.6",
+    "@types/passport": "^0.4.3",
     "express": "^4.16.2",
+    "jest": "^22.4.2",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.1",
+    "passport": "^0.4.0",
     "pug": "^2.0.0-rc.4",
     "ts-node": "^5.0.1",
     "typescript": "^2.7.2"
